--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="Winsnip"
+      name="Airdrop ASC"
       content="Your hub for airdrops, sniper strategies, and node guides! Get the latest airdrop alerts, trading insights, and node tips."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Winsnip</title>
+    <title>Airdrop ASC</title>
   </head>
   <body>
     <noscript>Your Trusted Airdrop Bot Script Hub.</noscript>
