--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="/logo/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -27,7 +27,7 @@
     <title>Airdrop ASC</title>
   </head>
   <body>
-    <noscript>Your Trusted Airdrop Bot Script Hub.</noscript>
+    <noscript>Airdrop Insights, Tutorials, and Beyond.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
